# sf_framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: Design Doc.docx  uml.vpp
include/sf_framework/: filter.h  fusion.h  sensor.h
src/: main.cpp
